<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fylm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_nav">Fylm</string>
    <string name="title_home">Home</string>
    <string name="title_audiences">Audiences</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="record">Record</string>
    <string name="map">View as Map</string>

    <!-- Sliding drawer -->
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="hello"><![CDATA[<b>Slider Text</b><br/> Somethign something something]]></string>
    <string name="follow"><![CDATA[Button Text<br/>]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Map box -->
    <string name="mapbox">Mapbox</string>
    <string name="menu_examplemaps">Example Maps</string>
    <string name="reportBugs">Report Bugs</string>

    <!-- Map Labels -->
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="street">Street</string>
    <string name="outdoors">Outdoors</string>
    <string name="woodcut">Woodcut</string>
    <string name="pencil">Pencil</string>
    <string name="spaceShip">Space Ship</string>
    <!-- Map Ids -->
    <string name="satelliteMapId">brunosan.map-cyglrrfu</string>
    <string name="terrainMapId">examples.map-zgrqqx0w</string>
    <string name="streetMapId">examples.map-i87786ca</string>
    <string name="outdoorsMapId">examples.ik7djhcc</string>
    <string name="woodcutMapId">examples.xqwfusor</string>
    <string name="pencilMapId">examples.a4c252ab</string>
    <string name="spaceShipMapId">examples.3hqcl3di</string>



</resources>
