<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fylm001.MainNavActivity" >
    <item
        android:id="@+id/action_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="always"
        android:title="@string/map">
    </item>
    <item
        android:id="@+id/action_video"
        android:icon="@drawable/ic_menu_device_access_video"
        app:showAsAction="always"
        android:title="@string/record">
    </item>

    <item android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_hide"/>

    <item
        android:id="@+id/action_anchor"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_anchor_enable"/>
</menu>
